--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Icebreaker-android-Fall25</string>
+    <string name="header_text">Icebreaker For Android</string>
+    <string name="first_name_text">First Name</string>
+    <string name="header_sub_text">Made by Raj Lama</string>
 </resources>
