--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,7 @@
     <string name="app_name">Icebreaker-android-Fall25</string>
     <string name="header_text">Icebreaker For Android</string>
     <string name="first_name_text">First Name</string>
+    <string name="last_name_text">Last Name</string>
+    <string name="pref_name_text">Pref Name</string>
     <string name="header_sub_text">Made by Raj Lama</string>
 </resources>
