--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="first_name_text">First Name</string>
     <string name="last_name_text">Last Name</string>
     <string name="pref_name_text">Pref Name</string>
+    <string name="answer_text">Answer</string>
     <string name="header_sub_text">Made by Raj Lama</string>
 </resources>
