Created string resources

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,7 @@
     <string name="last_name_text">Last Name</string>
     <string name="pref_name_text">Pref Name</string>
     <string name="answer_text">Answer</string>
+    <string name="question_button_text">Get a New Random Question</string>
+    <string name="submit_button_Text">Submit</string>
     <string name="header_sub_text">Made by Raj Lama</string>
 </resources>
